--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <nav class="navbar navbar-dark bg-company-grn">
     <div class="container">
         <a class="navbar-brand" href="#"><img width="201" height="45" src="{{logoImage}}"></a>
+        <a  *ngIf="isMakeMoney" href="tel:{{Tfn}}">
         <button *ngIf="isMakeMoney" class="btn btn-success ml-auto" style="background-color: rgba(255, 212, 71, 1); color: black;">
             CALL {{TfnClicktoCall}}</button>
+            </a>
     </div>
 </nav>
 
